chore(babel): Using preset stage-0 for arrow functions instead auto-bind

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   ],
   "dependencies": {
     "arrify": "^1.0.1",
-    "auto-bind": "^1.1.0",
     "is-plain-obj": "^1.1.0"
   },
   "devDependencies": {
@@ -31,6 +30,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "xo": "^0.18.2"
   }
 }
